--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseurl: "https://c-geng.com"  # please update this to your actual URL
 languageCode: "zh"
-title: "A minimal Hugo website"
+title: "耿畅"
 theme: "xmin"
 googleAnalytics: ""
 disqusShortname: ""
@@ -25,12 +25,10 @@ menu:
     - name: Tags
       url: "tags/"
       weight: 4
-    - name: Subscribe
-      url: "index.xml"
 
 params:
-  description: "A website built through Hugo and blogdown."
-  footer: "&copy; [Yihui Xie](https://yihui.org) 2017 -- {Year} | [Github](https://github.com/yihui) | [Twitter](https://twitter.com/xieyihui)"
+  #description: "A website built through Hugo and blogdown."
+  footer: "&copy; [GENG Chang](https://c-geng.com) 2015 -- {Year} | [Github](https://github.com/imchangchang)"
 
 markup:
   highlight:
