--- a/hugo.yaml
+++ b/hugo.yaml
@@ -27,7 +27,7 @@ menu:
       weight: 4
 
 params:
-  footer: "&copy; [GENG Chang](https://c-geng.com) 2015 -- {Year} | [Github](https://github.com/imchangchang) | [Gitee](https://gitee.com/imchangchang) | [Linkin](https://www.linkedin.com/in/imchangchang)"
+  footer: "&copy; [GENG Chang](https://c-geng.com) 2015 -- {Year}"
 
 markup:
   highlight:
