--- a/hugo.yaml
+++ b/hugo.yaml
@@ -19,6 +19,9 @@ menu:
     - name: Resume
       url: "resume/"
       weight: 2
+    - name: Patents
+      url: "patents/"
+      weight: 3
 
 params:
   footer: "&copy; [GENG Chang](https://c-geng.com) 2015 -- {Year}"
